--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,9 @@
         }
     },
     "autoload": {
+        "files": [
+          "app/Helpers/appHelper.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
