--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "croppie": "^2.6.3",
+        "select2": "^4.0.6-rc.1",
+        "select2-bootstrap4-theme": "^1.0.0",
         "toastr": "^2.1.4"
     }
 }
